--- a/app/src/main/res/layout/activity_beschleunigung.xml
+++ b/app/src/main/res/layout/activity_beschleunigung.xml
@@ -72,7 +72,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="<"
+            android:text="&lt;"
             android:textColor="@color/background"
             android:layout_marginEnd="20dp"
             android:backgroundTint="@color/button"
@@ -83,7 +83,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text=">"
+            android:text="&gt;"
             android:textColor="@color/background"
             android:layout_marginStart="20dp"
             android:backgroundTint="@color/button"
