--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -8,17 +8,32 @@
         android:background="@color/background"
         tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/headerText"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:background="@color/header"
-        android:gravity="center_vertical|center_horizontal"
-        android:padding="8dp"
-        android:text="Sensordaten"
-        android:textColor="@color/text"
-        android:textSize="30sp"
-        android:textStyle="bold" />
+        android:layout_height="wrap_content"
+        android:background="@color/header">
+
+        <TextView
+            android:id="@+id/headerText"
+            android:layout_width="690dp"
+            android:layout_height="80dp"
+            android:background="@color/header"
+            android:gravity="center_vertical|center_horizontal"
+            android:paddingStart="40dp"
+            android:text="Sensordaten"
+            android:textColor="@color/text"
+            android:textSize="28sp"
+            android:textStyle="bold" />
+
+        <ImageButton
+            android:id="@+id/notification_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/outline_circle_notifications_24"
+            android:background="@color/header"
+            android:layout_marginTop="16dp"
+            android:color="@color/text"/>
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/contentArea"
