--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,8 @@
 
         <TextView
             android:id="@+id/headerText"
-            android:layout_width="370dp"
+            android:layout_width="0dp"
+            android:layout_weight="30"
             android:layout_height="80dp"
             android:background="@color/header"
             android:gravity="center_vertical|center_horizontal"
@@ -29,9 +30,12 @@
             android:id="@+id/notification_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:src="@drawable/outline_circle_notifications_24"
             android:background="@color/header"
             android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:paddingBottom="15dp"
             android:color="@color/text"/>
     </LinearLayout>
 
