--- a/app/src/main/res/layout-land/activity_gyroskop.xml
+++ b/app/src/main/res/layout-land/activity_gyroskop.xml
@@ -103,7 +103,7 @@
             </LinearLayout>
 
             <com.github.mikephil.charting.charts.LineChart
-                android:id="@+id/lineChartGyroYX"
+                android:id="@+id/lineChartGyroX"
                 android:layout_width="match_parent"
                 android:layout_height="210dp"
                 android:layout_weight="1"
