Graphenansicht für alle Ereignisse

--- a/app/src/main/res/layout-land/activity_gyroskop.xml
+++ b/app/src/main/res/layout-land/activity_gyroskop.xml
@@ -78,11 +78,15 @@
                 <Button
                     android:layout_width="wrap_content"
                     android:layout_height="30dp"
-                    android:text="01.01.2025"
-                    android:textSize="8dp"
+                    android:text="01.01.2025 00:00"
+                    android:textSize="10dp"
                     android:textColor="@color/background"
                     android:backgroundTint="@color/button"
-                    android:id="@+id/button_x_von" />
+                    android:id="@+id/button_x_von"
+                    android:paddingStart="0dp"
+                    android:paddingEnd="0dp"
+                    android:paddingBottom="0dp"
+                    android:paddingTop="0dp"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -94,11 +98,15 @@
                 <Button
                     android:layout_width="wrap_content"
                     android:layout_height="30dp"
-                    android:text="01.01.2025"
-                    android:textSize="8dp"
+                    android:text="01.01.2025 00:00"
+                    android:textSize="10dp"
                     android:textColor="@color/background"
                     android:backgroundTint="@color/button"
-                    android:id="@+id/button_x_bis"/>
+                    android:id="@+id/button_x_bis"
+                    android:paddingStart="0dp"
+                    android:paddingEnd="0dp"
+                    android:paddingBottom="0dp"
+                    android:paddingTop="0dp"/>
 
             </LinearLayout>
 
@@ -123,11 +131,15 @@
                 <Button
                     android:layout_width="wrap_content"
                     android:layout_height="30dp"
-                    android:text="01.01.2025"
-                    android:textSize="8dp"
+                    android:text="01.01.2025 00:00"
+                    android:textSize="10dp"
                     android:textColor="@color/background"
                     android:backgroundTint="@color/button"
-                    android:id="@+id/button_y_von" />
+                    android:id="@+id/button_y_von"
+                    android:paddingStart="0dp"
+                    android:paddingEnd="0dp"
+                    android:paddingBottom="0dp"
+                    android:paddingTop="0dp"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -139,11 +151,15 @@
                 <Button
                     android:layout_width="wrap_content"
                     android:layout_height="30dp"
-                    android:text="01.01.2025"
-                    android:textSize="8dp"
+                    android:text="01.01.2025 00:00"
+                    android:textSize="10dp"
                     android:textColor="@color/background"
                     android:backgroundTint="@color/button"
-                    android:id="@+id/button_y_bis"/>
+                    android:id="@+id/button_y_bis"
+                    android:paddingStart="0dp"
+                    android:paddingEnd="0dp"
+                    android:paddingBottom="0dp"
+                    android:paddingTop="0dp"/>
 
             </LinearLayout>
 
@@ -211,11 +227,11 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Beschleunigung"
+                    android:text="Accel"
                     android:textColor="@color/text"
                     android:layout_margin="10dp"
                     android:gravity="center"
-                    android:textSize="11sp"/>
+                    android:textSize="15sp"/>
 
                 <Button
                     android:id="@+id/btnPrevAccel"
@@ -244,7 +260,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Magnetfeld"
+                    android:text="Mag"
                     android:textColor="@color/text"
                     android:layout_margin="10dp"
                     android:gravity="center"
