--- a/app/src/main/res/layout/activity_gyroskop.xml
+++ b/app/src/main/res/layout/activity_gyroskop.xml
@@ -74,11 +74,15 @@
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
-                android:text="01.01.2025"
-                android:textSize="8dp"
+                android:text="01.01.2025 00:00"
+                android:textSize="10dp"
                 android:textColor="@color/background"
                 android:backgroundTint="@color/button"
-                android:id="@+id/button_x_von" />
+                android:id="@+id/button_x_von"
+                android:paddingStart="0dp"
+                android:paddingEnd="0dp"
+                android:paddingBottom="0dp"
+                android:paddingTop="0dp"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -90,11 +94,15 @@
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
-                android:text="01.01.2025"
-                android:textSize="8dp"
+                android:text="01.01.2025 00:00"
+                android:textSize="10dp"
                 android:textColor="@color/background"
                 android:backgroundTint="@color/button"
-                android:id="@+id/button_x_bis"/>
+                android:id="@+id/button_x_bis"
+                android:paddingStart="0dp"
+                android:paddingEnd="0dp"
+                android:paddingBottom="0dp"
+                android:paddingTop="0dp"/>
 
         </LinearLayout>
 
@@ -119,11 +127,15 @@
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
-                android:text="01.01.2025"
-                android:textSize="8dp"
+                android:text="01.01.2025 00:00"
+                android:textSize="10dp"
                 android:textColor="@color/background"
                 android:backgroundTint="@color/button"
-                android:id="@+id/button_y_von" />
+                android:id="@+id/button_y_von"
+                android:paddingStart="0dp"
+                android:paddingEnd="0dp"
+                android:paddingBottom="0dp"
+                android:paddingTop="0dp"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -135,11 +147,15 @@
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
-                android:text="01.01.2025"
-                android:textSize="8dp"
+                android:text="01.01.2025 00:00"
+                android:textSize="10dp"
                 android:textColor="@color/background"
                 android:backgroundTint="@color/button"
-                android:id="@+id/button_y_bis"/>
+                android:id="@+id/button_y_bis"
+                android:paddingStart="0dp"
+                android:paddingEnd="0dp"
+                android:paddingBottom="0dp"
+                android:paddingTop="0dp"/>
 
         </LinearLayout>
 
@@ -164,11 +180,15 @@
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
-                android:text="01.01.2025"
-                android:textSize="8dp"
+                android:text="01.01.2025 00:00"
+                android:textSize="10dp"
                 android:textColor="@color/background"
                 android:backgroundTint="@color/button"
-                android:id="@+id/button_z_von" />
+                android:id="@+id/button_z_von"
+                android:paddingStart="0dp"
+                android:paddingEnd="0dp"
+                android:paddingBottom="0dp"
+                android:paddingTop="0dp"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -180,11 +200,15 @@
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
-                android:text="01.01.2025"
-                android:textSize="8dp"
+                android:text="01.01.2025 00:00"
+                android:textSize="10dp"
                 android:textColor="@color/background"
                 android:backgroundTint="@color/button"
-                android:id="@+id/button_z_bis"/>
+                android:id="@+id/button_z_bis"
+                android:paddingStart="0dp"
+                android:paddingEnd="0dp"
+                android:paddingBottom="0dp"
+                android:paddingTop="0dp"/>
 
         </LinearLayout>
 
@@ -209,11 +233,11 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Beschleunigung"
+            android:text="Accel"
             android:textColor="@color/text"
             android:layout_margin="10dp"
             android:gravity="center"
-            android:textSize="11sp"/>
+            android:textSize="15sp"/>
 
         <Button
             android:id="@+id/btnPrevAccel"
@@ -242,7 +266,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Magnetfeld"
+            android:text="Mag"
             android:textColor="@color/text"
             android:layout_margin="10dp"
             android:gravity="center"
