--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -191,6 +191,16 @@
                     android:textSize="28sp" />
             </LinearLayout>
 
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Zur Grapenansicht"
+                android:layout_marginTop="30dp"
+                android:backgroundTint="@color/button"
+                android:textColor="@color/background"
+                android:id="@+id/graphenansicht"/>
+
         </LinearLayout>
 
         <LinearLayout
