--- a/app/src/main/res/layout/activity_main_graph.xml
+++ b/app/src/main/res/layout/activity_main_graph.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:id="@+id/magnet"
+    android:id="@+id/main"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/background"
@@ -13,28 +13,15 @@
         android:layout_height="wrap_content"
         android:background="@color/header">
 
-        <ImageButton
-            android:id="@+id/home_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/baseline_home_24"
-            android:contentDescription="Zur Startseite"
-            android:background="@color/header"
-            android:layout_marginTop="16dp"
-            android:layout_marginStart="16dp"
-            android:paddingBottom="15dp"
-            android:layout_weight="1"
-            android:color="@color/text"/>
-
         <TextView
             android:id="@+id/headerText"
             android:layout_width="0dp"
+            android:layout_weight="30"
             android:layout_height="80dp"
             android:background="@color/header"
             android:gravity="center_vertical|center_horizontal"
-            android:layout_weight="28"
-            android:padding="17dp"
-            android:text="Magnetfeld"
+            android:paddingStart="40dp"
+            android:text="Sensordaten"
             android:textColor="@color/text"
             android:textSize="28sp"
             android:textStyle="bold" />
@@ -43,22 +30,22 @@
             android:id="@+id/notification_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:src="@drawable/outline_circle_notifications_24"
             android:background="@color/header"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:paddingBottom="15dp"
-            android:layout_weight="1"
             android:color="@color/text"/>
-
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/contentArea"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:orientation="vertical"
         android:layout_weight="1"
-        android:layout_margin="10dp">
+        android:orientation="vertical"
+        android:padding="16dp">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -78,7 +65,7 @@
                 android:textSize="10dp"
                 android:textColor="@color/background"
                 android:backgroundTint="@color/button"
-                android:id="@+id/button_x_von"
+                android:id="@+id/button_Accel_von"
                 android:paddingStart="0dp"
                 android:paddingEnd="0dp"
                 android:paddingBottom="0dp"
@@ -95,10 +82,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
                 android:text="01.01.2025 00:00"
-                android:textSize="10dp"
+                android:textSize="10sp"
                 android:textColor="@color/background"
                 android:backgroundTint="@color/button"
-                android:id="@+id/button_x_bis"
+                android:id="@+id/button_Accel_bis"
                 android:paddingStart="0dp"
                 android:paddingEnd="0dp"
                 android:paddingBottom="0dp"
@@ -107,7 +94,7 @@
         </LinearLayout>
 
         <com.github.mikephil.charting.charts.LineChart
-            android:id="@+id/lineChartMagnetX"
+            android:id="@+id/lineChartAccel"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
@@ -116,6 +103,40 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            >
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="x-Achse"
+                android:textColor="@color/text"
+                android:id="@+id/AccelxCheck"/>
+
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="y-Achse"
+                android:textColor="@color/text"
+                android:id="@+id/AccelyCheck"/>
+
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="z-Achse"
+                android:textColor="@color/text"
+                android:id="@+id/AccelzCheck"/>
+
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Summe"
+                android:textColor="@color/text"
+                android:id="@+id/AccelSumCheck"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <TextView
@@ -127,11 +148,11 @@
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
-                android:text="01.01.2025 00:00"
+                android:text="01.01. 00:00"
                 android:textSize="10dp"
                 android:textColor="@color/background"
                 android:backgroundTint="@color/button"
-                android:id="@+id/button_y_von"
+                android:id="@+id/button_Gyro_von"
                 android:paddingStart="0dp"
                 android:paddingEnd="0dp"
                 android:paddingBottom="0dp"
@@ -151,7 +172,7 @@
                 android:textSize="10dp"
                 android:textColor="@color/background"
                 android:backgroundTint="@color/button"
-                android:id="@+id/button_y_bis"
+                android:id="@+id/button_Gyro_bis"
                 android:paddingStart="0dp"
                 android:paddingEnd="0dp"
                 android:paddingBottom="0dp"
@@ -160,11 +181,45 @@
         </LinearLayout>
 
         <com.github.mikephil.charting.charts.LineChart
-            android:id="@+id/lineChartMagnetY"
+            android:id="@+id/lineChartGyro"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
             android:layout_margin="16dp" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            >
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="x-Achse"
+                android:textColor="@color/text"
+                android:id="@+id/GyroxCheck"/>
+
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="y-Achse"
+                android:textColor="@color/text"
+                android:id="@+id/GyroyCheck"/>
+
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="z-Achse"
+                android:textColor="@color/text"
+                android:id="@+id/GyrozCheck"/>
+
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Summe"
+                android:textColor="@color/text"
+                android:id="@+id/GyroSumCheck"/>
+
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -184,7 +239,7 @@
                 android:textSize="10dp"
                 android:textColor="@color/background"
                 android:backgroundTint="@color/button"
-                android:id="@+id/button_z_von"
+                android:id="@+id/button_Mag_von"
                 android:paddingStart="0dp"
                 android:paddingEnd="0dp"
                 android:paddingBottom="0dp"
@@ -204,7 +259,7 @@
                 android:textSize="10dp"
                 android:textColor="@color/background"
                 android:backgroundTint="@color/button"
-                android:id="@+id/button_z_bis"
+                android:id="@+id/button_Mag_bis"
                 android:paddingStart="0dp"
                 android:paddingEnd="0dp"
                 android:paddingBottom="0dp"
@@ -213,11 +268,56 @@
         </LinearLayout>
 
         <com.github.mikephil.charting.charts.LineChart
-            android:id="@+id/lineChartMagnetZ"
+            android:id="@+id/lineChartMag"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:layout_margin="16dp" />
+            android:layout_margin="16dp"/>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            >
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="x-Achse"
+                android:textColor="@color/text"
+                android:id="@+id/MagxCheck"/>
+
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="y-Achse"
+                android:textColor="@color/text"
+                android:id="@+id/MagyCheck"/>
+
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="z-Achse"
+                android:textColor="@color/text"
+                android:id="@+id/MagzCheck"/>
+
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Summe"
+                android:textColor="@color/text"
+                android:id="@+id/MagSumCheck"/>
+
+        </LinearLayout>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="Zur Werteansicht"
+            android:layout_marginTop="10dp"
+            android:backgroundTint="@color/button"
+            android:textColor="@color/background"
+            android:id="@+id/werteansicht"/>
+
     </LinearLayout>
 
     <LinearLayout
@@ -228,48 +328,37 @@
         android:gravity="center"
         android:background="@color/header">
 
-        <TextView
-            android:id="@+id/gyroDescription"
+        <Button
+            android:id="@+id/btnAccel"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Gyro"
-            android:textColor="@color/text"
-            android:layout_margin="10dp"
-            android:gravity="center"
-            android:textSize="15sp"/>
+            android:text="Beschleunigung"
+            android:textColor="@color/background"
+            android:layout_margin="4dp"
+            android:backgroundTint="@color/button"
+            android:textSize="10sp" />
 
         <Button
-            android:id="@+id/btnPrevGyro"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="&lt;"
-            android:textColor="@color/background"
-            android:layout_marginEnd="20dp"
-            android:backgroundTint="@color/button"
-            android:textSize="20sp" />
-
-        <Button
-            android:id="@+id/btnNextAccel"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="&gt;"
-            android:textColor="@color/background"
-            android:layout_marginStart="20dp"
-            android:backgroundTint="@color/button"
-            android:textSize="20sp"/>
-
-        <TextView
             android:id="@+id/btnGyro"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Accel"
-            android:textColor="@color/text"
-            android:layout_margin="10dp"
-            android:gravity="center"
-            android:textSize="15sp"/>
+            android:text="Gyroskop"
+            android:textColor="@color/background"
+            android:layout_margin="4dp"
+            android:backgroundTint="@color/button"
+            android:textSize="10sp"/>
+
+        <Button
+            android:id="@+id/btnMagnet"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Magnetfeld"
+            android:textColor="@color/background"
+            android:layout_margin="4dp"
+            android:backgroundTint="@color/button"
+            android:textSize="10sp"/>
     </LinearLayout>
 </LinearLayout>
