--- a/app/src/main/res/layout-land/activity_beschleunigung.xml
+++ b/app/src/main/res/layout-land/activity_beschleunigung.xml
@@ -108,6 +108,16 @@
                     android:paddingBottom="0dp"
                     android:paddingTop="0dp"/>
 
+                <ImageButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/outline_reset_focus_24"
+                    android:background="@color/background"
+                    android:layout_marginStart="10dp"
+                    android:paddingTop="3dp"
+                    android:id="@+id/resetX"
+                    />
+
             </LinearLayout>
 
             <com.github.mikephil.charting.charts.LineChart
@@ -160,6 +170,16 @@
                     android:paddingEnd="0dp"
                     android:paddingBottom="0dp"
                     android:paddingTop="0dp"/>
+
+                <ImageButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/outline_reset_focus_24"
+                    android:background="@color/background"
+                    android:layout_marginStart="10dp"
+                    android:paddingTop="3dp"
+                    android:id="@+id/resetY"
+                    />
 
             </LinearLayout>
 
@@ -214,6 +234,16 @@
                     android:paddingBottom="0dp"
                     android:paddingTop="0dp"/>
 
+                <ImageButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/outline_reset_focus_24"
+                    android:background="@color/background"
+                    android:layout_marginStart="10dp"
+                    android:paddingTop="3dp"
+                    android:id="@+id/resetZ"
+                    />
+
             </LinearLayout>
 
             <com.github.mikephil.charting.charts.LineChart
@@ -240,7 +270,7 @@
                     android:textColor="@color/text"
                     android:layout_margin="10dp"
                     android:gravity="center"
-                    android:textSize="15sp"/>
+                    android:textSize="20sp"/>
 
                 <Button
                     android:id="@+id/btnPrevMagnet"
@@ -273,7 +303,7 @@
                     android:textColor="@color/text"
                     android:layout_margin="10dp"
                     android:gravity="center"
-                    android:textSize="15sp"/>
+                    android:textSize="20sp"/>
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
