--- a/app/src/main/res/layout-land/activity_ereignisse_graph.xml
+++ b/app/src/main/res/layout-land/activity_ereignisse_graph.xml
@@ -17,7 +17,6 @@
             android:id="@+id/home_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:src="@drawable/baseline_home_24"
             android:contentDescription="Zur Startseite"
             android:background="@color/header"
@@ -28,37 +27,17 @@
 
         <TextView
             android:id="@+id/headerText"
-            android:layout_width="0dp"
-            android:layout_weight="30"
+            android:layout_width="330dp"
             android:layout_height="80dp"
             android:background="@color/header"
             android:gravity="center_vertical|center_horizontal"
             android:padding="17dp"
-            android:text="@string/ereignisse_title"
+            android:text="Ereignisse"
             android:textColor="@color/text"
             android:textSize="26sp"
-            android:textStyle="bold"/>
-
-        <ImageButton
-            android:id="@+id/new_event"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:src="@drawable/outline_add_alert_24"
-            android:contentDescription="Zur Startseite"
-            android:background="@color/header"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
-            android:paddingBottom="15dp"
-            android:color="@color/text"/>
+            android:textStyle="bold" />
 
     </LinearLayout>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/my_table_recyclerview"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"/>
 
     <LinearLayout
         android:id="@+id/footerBar"
@@ -75,9 +54,9 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Tabellenansicht"
-            android:textColor="@color/text"
+            android:textColor="@color/background"
             android:layout_marginEnd="20dp"
-            android:backgroundTint="@color/background"
+            android:backgroundTint="@color/button"
             android:textSize="15sp" />
 
         <Button
@@ -86,9 +65,9 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Graphenansicht"
-            android:textColor="@color/background"
+            android:textColor="@color/text"
             android:layout_marginStart="20dp"
-            android:backgroundTint="@color/button"
+            android:backgroundTint="@color/background"
             android:textSize="15sp"/>
 
     </LinearLayout>
