--- a/app/src/main/res/layout/activity_ereignisse.xml
+++ b/app/src/main/res/layout/activity_ereignisse.xml
@@ -39,6 +39,19 @@
             android:textSize="26sp"
             android:textStyle="bold" />
 
+        <ImageButton
+            android:id="@+id/new_event"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:src="@drawable/outline_add_alert_24"
+            android:contentDescription="Zur Startseite"
+            android:background="@color/header"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:paddingBottom="15dp"
+            android:color="@color/text"/>
+
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
