--- a/app/src/main/res/layout/activity_magnetfeld.xml
+++ b/app/src/main/res/layout/activity_magnetfeld.xml
@@ -74,7 +74,7 @@
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
-                android:text="01.01.2025 00:00"
+                android:text=""
                 android:textSize="10dp"
                 android:textColor="@color/background"
                 android:backgroundTint="@color/button"
@@ -94,7 +94,7 @@
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
-                android:text="01.01.2025 00:00"
+                android:text=""
                 android:textSize="10dp"
                 android:textColor="@color/background"
                 android:backgroundTint="@color/button"
@@ -103,6 +103,16 @@
                 android:paddingEnd="0dp"
                 android:paddingBottom="0dp"
                 android:paddingTop="0dp"/>
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/outline_reset_focus_24"
+                android:background="@color/background"
+                android:layout_marginStart="10dp"
+                android:paddingTop="3dp"
+                android:id="@+id/resetX"
+                />
 
         </LinearLayout>
 
@@ -127,7 +137,7 @@
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
-                android:text="01.01.2025 00:00"
+                android:text=""
                 android:textSize="10dp"
                 android:textColor="@color/background"
                 android:backgroundTint="@color/button"
@@ -147,7 +157,7 @@
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
-                android:text="01.01.2025 00:00"
+                android:text=""
                 android:textSize="10dp"
                 android:textColor="@color/background"
                 android:backgroundTint="@color/button"
@@ -156,6 +166,16 @@
                 android:paddingEnd="0dp"
                 android:paddingBottom="0dp"
                 android:paddingTop="0dp"/>
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/outline_reset_focus_24"
+                android:background="@color/background"
+                android:layout_marginStart="10dp"
+                android:paddingTop="3dp"
+                android:id="@+id/resetY"
+                />
 
         </LinearLayout>
 
@@ -180,7 +200,7 @@
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
-                android:text="01.01.2025 00:00"
+                android:text=""
                 android:textSize="10dp"
                 android:textColor="@color/background"
                 android:backgroundTint="@color/button"
@@ -200,7 +220,7 @@
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
-                android:text="01.01.2025 00:00"
+                android:text=""
                 android:textSize="10dp"
                 android:textColor="@color/background"
                 android:backgroundTint="@color/button"
@@ -209,6 +229,16 @@
                 android:paddingEnd="0dp"
                 android:paddingBottom="0dp"
                 android:paddingTop="0dp"/>
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/outline_reset_focus_24"
+                android:background="@color/background"
+                android:layout_marginStart="10dp"
+                android:paddingTop="3dp"
+                android:id="@+id/resetZ"
+                />
 
         </LinearLayout>
 
@@ -237,7 +267,7 @@
             android:textColor="@color/text"
             android:layout_margin="10dp"
             android:gravity="center"
-            android:textSize="15sp"/>
+            android:textSize="20sp"/>
 
         <Button
             android:id="@+id/btnPrevGyro"
@@ -266,10 +296,10 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Accel"
+            android:text="Acc"
             android:textColor="@color/text"
             android:layout_margin="10dp"
             android:gravity="center"
-            android:textSize="15sp"/>
+            android:textSize="20sp"/>
     </LinearLayout>
 </LinearLayout>
